--- a/futuro rico oficial 3/indicacoes.html
+++ b/futuro rico oficial 3/indicacoes.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>  
+    <link rel="shortcut icon" href="/img/Logogreenblack.svg" type="image/x-icon" />
 
 </head>
 <body>
@@ -61,13 +62,13 @@
   </header>
   <main>
     <div class="banner">
-      <div class="banner-bg-indicacoes">
-        <h1 class="display-1" id="titulo-banner">INDICAÇÕES</h1>
-        <p class="lead" id="conteudo-banner">Para uma aprendizagem mais eficaz na gestão financeira, recomendamos alguns influenciadores que abordam o tema e podem auxiliá-lo a aprofundar seus conhecimentos.</p>
+      <div id="banner-bg-indicacoes">
+        <h1 class="display-1 titulo-banner">INDICAÇÕES</h1>
+        <p class="lead conteudo-banner">Para uma aprendizagem mais eficaz na gestão financeira, recomendamos alguns influenciadores que abordam o tema e podem auxiliá-lo a aprofundar seus conhecimentos.</p>
       </div>
     </div>
-    <section class="content" id="section-pessoas">
-      <h2 class="display-2" id="titulo-secundario">Thiago Nigro</h2>
+    <section id="section-pessoas">
+      <h2 class="display-2 titulo-secundario">Thiago Nigro</h2>
       <div class="img-pessoas">  
         <img src="./img/thiago nigro.jpg" class="img-fluid" alt="Responsive image">
       </div>
@@ -79,10 +80,10 @@
         bolsa de valores e, com erros e acertos, iniciou seu processo de educador
         financeiro.</p>
         <p class="content-decoration">
-          <a target="_blank" href="https://www.instagram.com/thiago.nigro/">@thiago.nigro</a>
+        <a target="_blank" href="https://www.instagram.com/thiago.nigro/">@thiago.nigro</a>
         </p>
-    </div>
-      <h2 class="display-2" id="titulo-secundario">Nathalia Arcuri</h2>
+      </div>
+      <h2 class="display-2 titulo-secundario">Nathalia Arcuri</h2>
       <div class="img-pessoas"> 
         <img src="./img/nathalia arcuri.jpg" class="img-fluid" alt="Responsive image"> 
       </div>
@@ -93,10 +94,10 @@
           ela fala sobre dicas de investimentos, planejamento financeiro e conceitos
           básicos para entender o mundo do dinheiro.</p>
         <p class="content-decoration">
-          <a target="_blank" href="https://www.instagram.com/nathaliaarcuri/">@nathaliaarcuri</a>
+        <a target="_blank" href="https://www.instagram.com/nathaliaarcuri/">@nathaliaarcuri</a>
         </p>
       </div>
-      <h2 class="display-2" id="titulo-secundario">Bruno Perini</h2>
+      <h2 class="display-2 titulo-secundario">Bruno Perini</h2>
       <div class="img-pessoas"> 
         <img src="./img/bruno perini.jpeg" class="img-fluid" alt="Responsive image"> 
       </div>
@@ -108,12 +109,12 @@
           inscritos e Bruno também fala em seu onde foca principalmente na
           mudança da rotina e planejamentos mais inteligentes do patrimônio.</p>
         <p class="content-decoration">
-          <a target="_blank" href="https://www.instagram.com/bruno_perini/">@bruno_perini</a>
+        <a target="_blank" href="https://www.instagram.com/bruno_perini/">@bruno_perini</a>
         </p>
       </div>
-      <h2 class="display-2" id="titulo-secundario">Charles Mendlowicz</h2>
+      <h2 class="display-2 titulo-secundario">Charles Mendlowicz</h2>
       <div class="img-pessoas"> 
-        <img src="./img/charles mendlowicz.jpg" class="img-fluid" alt="Responsive image"> 
+        <img src="./img/charles.png" class="img-fluid" alt="Responsive image"> 
       </div>
       <div class="lead-pessoas">
         <p class="lead">O influenciador Charles Mendlowicz é conhecido como o “Economista
@@ -123,10 +124,10 @@
           assuntos diversos, como investimentos, criptomoedas, trabalho e assuntos da
           economia em geral.</p>
         <p class="content-decoration">
-          <a target="_blank" href="https://www.instagram.com/charles.wicz/">@charles.wicz</a>
+        <a target="_blank" href="https://www.instagram.com/charles.wicz/">@charles.wicz</a>
         </p>
       </div>
-      <h2 class="display-2" id="titulo-secundario">Nathalia Rodrigues</h2>
+      <h2 class="display-2 titulo-secundario">Nathalia Rodrigues</h2>
       <div class="img-pessoas"> 
         <img src="./img/nathalia rodrigues.jpg" class="img-fluid" alt="Responsive image"> 
       </div>
@@ -137,7 +138,7 @@
           com o pagamento das contas do fim do mês do que aquelas que têm
           milhares para investir.</p>
         <p class="content-decoration">
-          <a target="_blank" href="https://www.instagram.com/nathfinancas/">@nathfinancas</a>
+        <a target="_blank" href="https://www.instagram.com/nathfinancas/">@nathfinancas</a>
         </p>
       </div>
     </section>
