--- a/futuro rico oficial 3/investimento.html
+++ b/futuro rico oficial 3/investimento.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>  
+    <link rel="shortcut icon" href="/img/Logogreenblack.svg" type="image/x-icon" />
 
 </head>
 <header>
@@ -61,38 +62,37 @@
 <body>
   <main>
     <div class="banner">
-      <div class="banner-bg-investimento">
-        <h1 class="display-1" id="titulo-banner">INVESTIMENTO</h1>
-        <p class="lead" id="conteudo-banner">O primeiro passo para qualquer pessoa que está se organizando e quer ter um diagnóstico das finanças antes de começar a investir é ter uma boa organização financeira.</p>
+      <div id="banner-bg-investimento">
+        <h1 class="display-1 titulo-banner">INVESTIMENTO</h1>
+        <p class="lead conteudo-banner">O primeiro passo para qualquer pessoa que está se organizando e quer ter um diagnóstico das finanças antes de começar a investir é ter uma boa organização financeira.</p>
       </div>
     </div>
-    <div class="conteudo-principal" id="conteudo-pagina">
-      <section id="content">
-        <h2 class="display-2" id="titulo-secundario">Atenção!!!</h2>
-        <p class="lead">Um passo fundamental para saber como começar a investir é definir quais objetivos e sonhos você quer realizar com o dinheiro que vai investir. Do mesmo modo, é fundamental saber a quantia que você tem para aplicar em investimentos por mês,é importante saber seus ganhos e despesas até chegar em um valor realista. Também é preciso ter um bom planejamento financeiro, definir perfil e objetivos de curto, médio e longo prazos e aprender a investir corretamente. É importante ter equilíbrio nesse planejamento, o que vai facilitar os seus investimentos.</p>
-        <h2 class="display-2" id="titulo-secundario">Prazos</h2>
-        <p class="lead">Depois desse planejamento já feito é preciso separar objetivos de curto, médio e longo prazos. É importante também ter equilíbrio nesse planejamento, o que vai facilitar os seus investimentos.
-        </p>
-        <div class="table-responsive-sm" id="tabela">
-          <table class="table">
-            <td id="titulo-tabela">
-              Curto prazo:</td>
-              <td id="conteudo-tabela">são aqueles cujo resgate ocorrerá em até dois anos. 
-                </td>
+    <div class="conteudo-principal">
+      <h2 class="display-2 titulo-secundario">Atenção!!!</h2>
+      <p class="lead">Um passo fundamental para saber como começar a investir é definir quais objetivos e sonhos você quer realizar com o dinheiro que vai investir. Do mesmo modo, é fundamental saber a quantia que você tem para aplicar em investimentos por mês,é importante saber seus ganhos e despesas até chegar em um valor realista. Também é preciso ter um bom planejamento financeiro, definir perfil e objetivos de curto, médio e longo prazos e aprender a investir corretamente. É importante ter equilíbrio nesse planejamento, o que vai facilitar os seus investimentos.</p>
+      <h2 class="display-2 titulo-secundario">Prazos</h2>
+      <p class="lead">Depois desse planejamento já feito é preciso separar objetivos de curto, médio e longo prazos. É importante também ter equilíbrio nesse planejamento, o que vai facilitar os seus investimentos.
+      </p>
+      <div class="table-responsive-sm" id="tabela">
+        <table class="table">
+          <td id="titulo-tabela">
+            Curto prazo:</td>
+          <td id="conteudo-tabela">são aqueles cujo resgate ocorrerá em até dois anos. </td>
           <table class="table">
             <td id="titulo-tabela">Médio prazo:</td>
-              <td id="conteudo-tabela">são aqueles cujo resgate ocorrerá, em média, entre 2 e 5 anos. 
-                </td>
-          <table class="table">
+            <td id="conteudo-tabela">são aqueles cujo resgate ocorrerá, em média, entre 2 e 5 anos.</td>
+            <table class="table">
             <td id="titulo-tabela">Longo prazo:</td>
-              <td id="conteudo-tabela">são aqueles em que a empresa pretende resgatar o valor aplicado após cinco anos. 
-                </td>
-                  </table>
-                </table>
+            <td id="conteudo-tabela">são aqueles em que a empresa pretende resgatar o valor aplicado após cinco anos.</td>
             </table>
-        </div>
-      <p class="lead">Mesmo nos dias atuais ainda existem muitas pessoas que pensam que investir é coisa para milionários, que é preciso ter muito dinheiro para então poder começar. Em muitos casos o'que acontece é o oposto, muitas pessoas de baixa renda vão investindo aos poucos e assim enriquecendo de pouco a pouco. Há conceituação de investimentos de <a href="renda_fixa.html">renda fixa</a> e de <a href="renda_variavel.html">renda variável</a> e seus exemplos em nosso site.</p>
-    </section>
+          </table>
+        </table>
+      </div>
+      <p class="lead">Mesmo nos dias atuais ainda existem muitas pessoas que pensam que investir é coisa para milionários, que é preciso ter muito dinheiro para então poder começar. Em muitos casos o'que acontece é o oposto, muitas pessoas de baixa renda vão investindo aos poucos e assim enriquecendo de pouco a pouco. Há conceituação de investimentos de 
+      <a href="renda_fixa.html">renda fixa</a>
+       e de 
+      <a href="renda_variavel.html">renda variável</a>
+      e seus exemplos em nosso site.</p>
   </main>
 </body>
 </html>
