--- a/futuro rico oficial 3/sobre.html
+++ b/futuro rico oficial 3/sobre.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>  
+    <link rel="shortcut icon" href="/img/Logogreenblack.svg" type="image/x-icon" />
 
 </head>
 <body>
@@ -61,85 +62,78 @@
   </header>
   <main>
     <div class="banner">
-      <div class="banner-bg-indicacoes">
-        <h1 class="display-1" id="titulo-banner">SOBRE</h1>
-        <p class="lead" id="conteudo-banner">Somos um grupo formado por sete estudantes da FUNEC Riacho, unidos por uma visão comum: capacitar e educar as pessoas sobre o fascinante mundo do dinheiro. O Futuro Rico nasceu da paixão compartilhada por entender e dominar os princípios financeiros que impactam diretamente nossas vidas diárias.</p>
+      <div id="banner-bg-sobre">
+        <h1 class="display-1 titulo-banner">SOBRE</h1>
+        <p class="lead conteudo-banner">Somos um grupo formado por sete estudantes da FUNEC Riacho, unidos por uma visão comum: capacitar e educar as pessoas sobre o fascinante mundo do dinheiro. O Futuro Rico nasceu da paixão compartilhada por entender e dominar os princípios financeiros que impactam diretamente nossas vidas diárias.</p>
       </div>
     </div>
-    <h2 class="display-2" id="titulo-secundario">Objetivo</h2>
-      <div>
-        <p class="lead">No Futuro Rico, acreditamos que o conhecimento sobre finanças é fundamental para o empoderamento individual. Nosso compromisso é proporcionar a você as ferramentas e informações necessárias para tomar decisões financeiras informadas e alcançar seus objetivos de maneira inteligente.</p>
-    </div>
-    <section class="content" id="section-pessoas">
-      <h2 class="display-2" id="titulo-secundario">Nossa Equipe</h2>
-      <h3 class="display-2" id="titulo-secundario"> Pedro </h3>
+    <h2 class="display-2 titulo-secundario">Objetivo</h2>
+    <p class="lead">No Futuro Rico, acreditamos que o conhecimento sobre finanças é fundamental para o empoderamento individual. Nosso compromisso é proporcionar a você as ferramentas e informações necessárias para tomar decisões financeiras informadas e alcançar seus objetivos de maneira inteligente.</p>
+    <section id="section-pessoas">
+      <h2 class="display-2 titulo-secundario">Nossa Equipe</h2>
+      <h3 class="display-2 titulo-secundario"> Pedro </h3>
       <div class="img-pessoas"> 
         <img src="./img/pedro.jpeg" class="img-fluid" alt="Responsive image"> 
       </div>
       <div class="lead-pessoas">
-        <p class="lead">Olá, sou Pedro Silva Pereira, um entusiasta de 17 anos com o sonho de seguir na área de sistemas de informação. Atuei como representante e fiquei responsável pelo design, programação em javascript e o andamento do projeto</p>
+        <p class="lead">Olá, sou Pedro Silva, um entusiasta de 17 anos com o sonho de seguir na área de sistemas de informação. Atuei como representante e fiquei responsável pelo design, programação em javascript e o andamento do projeto</p>
         <p class="content-decoration">
-          <a target="_blank" href="https://www.instagram.com/pipow33/">@pipow33</a>
-        </p>
+        <a target="_blank" href="https://www.instagram.com/pipow33/">@pipow33</a></p>
       </div>
-      <h2 class="display-2" id="titulo-secundario">Bruno</h2>
+      <h2 class="display-2 titulo-secundario">Bruno</h2>
       <div class="img-pessoas"> 
         <img src="./img/bruno.png" class="img-fluid" alt="Responsive image"> 
       </div>
       <div class="lead-pessoas">
         <p class="lead">Olá, sou Bruno Aires, tenho 17 anos de idade e pretendo atuar na área da tecnologia como um desenvolvedor back-end. Fui responsável pela estilização, marcação e responsividade do site.</p>
         <p class="content-decoration">
-          <a target="_blank" href="https://www.instagram.com/bruno.a1res/">@bruno.a1res</a>
-        </p>
+        <a target="_blank" href="https://www.instagram.com/bruno.a1res/">@bruno.a1res</a></p>
       </div>
-      <h2 class="display-2" id="titulo-secundario">Rúbia</h2>
+      <h2 class="display-2 titulo-secundario">Rúbia</h2>
       <div class="img-pessoas"> 
         <img src="./img/rubia.png" class="img-fluid" alt="Responsive image"> 
       </div>
       <div class="lead-pessoas">
         <p class="lead">Olá, sou Rúbia Neiva da Costa, tenho 17 anos com destaque na área de pesquisa. Possuo dedicação e proatividade para alcançar objetivos, atuo como uma das pesquisadoras do site.</p>
         <p class="content-decoration">
-          <a target="_blank" href="https://www.instagram.com/rubiineiva/">@rubiineiva</a>
-        </p>
+        <a target="_blank" href="https://www.instagram.com/rubiineiva/">@rubiineiva</a></p>
       </div>
-      <h2 class="display-2" id="titulo-secundario">Maria Luiza</h2>
+      <h2 class="display-2 titulo-secundario">Maria Luiza</h2>
       <div class="img-pessoas"> 
         <img src="./img/maria_luiza.png" class="img-fluid" alt="Responsive image"> 
       </div>
       <div class="lead-pessoas">
         <p class="lead">Olá, sou Maria Luiza Moura Nominato e tenho 17 anos. Sempre gostei da área financeira e espero que com o nosso site você consiga aprender algo e conseguir ter uma estabilidade financeira. Atuo como uma das pesquisadoras do site.</p>
         <p class="content-decoration">
-          <a target="_blank" href="https://www.instagram.com/mallumoura01/">@mallumoura01</a>
+        <a target="_blank" href="https://www.instagram.com/mallumoura01/">@mallumoura01</a>
         </p>
       </div>
-      <h2 class="display-2" id="titulo-secundario">Melissa</h2>
+      <h2 class="display-2 titulo-secundario">Melissa</h2>
       <div class="img-pessoas"> 
         <img src="./img/melissa.png" class="img-fluid" alt="Responsive image"> 
       </div>
       <div class="lead-pessoas">
         <p class="lead">Olá, sou Melissa vitória Santos de Sousa, tenho 17 anos. Possuo muita dedicação para saber cada vez mais e  poder passar adiante informações sobre como “cuidar” do seu próprio dinheiro, atuo como uma das pesquisadoras do site.</p>
         <p class="content-decoration">
-          <a target="_blank" href="https://www.instagram.com/301melissavitoria/">@301melissavitoria</a></p>
+        <a target="_blank" href="https://www.instagram.com/301melissavitoria/">@301melissavitoria</a><p>
       </div>
-      <h2 class="display-2" id="titulo-secundario">Leticia</h2>
+      <h2 class="display-2 titulo-secundario">Leticia</h2>
       <div class="img-pessoas"> 
         <img src="./img/leticia.png" class="img-fluid" alt="Responsive image"> 
       </div>
       <div class="lead-pessoas">
         <p class="lead">Olá, sou Letícia Sayonara Gandra e tenho 16 anos. Possuo a qualidade de ser criativa e de sempre buscar o melhor a todos ao redor. Atuo como uma das pesquisadoras deste site.</p>
         <p class="content-decoration">
-          <a target="_blank" href="https://www.instagram.com/leticia.sayonaraa/">@leticia.sayonaraa</a>
-        </p>
+        <a target="_blank" href="https://www.instagram.com/leticia.sayonaraa/">@leticia.sayonaraa</a></p>
       </div>
-      <h2 class="display-2" id="titulo-secundario">Bruna</h2>
+      <h2 class="display-2 titulo-secundario">Bruna</h2>
       <div class="img-pessoas"> 
         <img src="./img/bruna.png" class="img-fluid" alt="Responsive image"> 
       </div>
       <div class="lead-pessoas">
         <p class="lead">Olá, meu nome é Bruna Helena Barbosa Villar e tenho 16 anos. A área financeira para mim se trata de algo fundamental pra vida de todos.Atuo como uma das pesquisadoras do projeto.</p>
         <p class="content-decoration">
-          <a target="_blank" href="https://www.instagram.com/bru_villarr/">@bru_villarr</a>
-        </p>
+        <a target="_blank" href="https://www.instagram.com/bru_villarr/">@bru_villarr</a></p>
       </div>
     </section>
   </main>
