--- a/futuro rico oficial final/banco.html
+++ b/futuro rico oficial final/banco.html
@@ -98,5 +98,16 @@
       qual banco criar uma conta vai da necessidade e preferência de cada adulto .</p>
     </div>
   </main>
+  <footer class="bg-body-tertiary text-center text-lg-start">
+    <div class="container p-4">
+      <div class="row">
+        <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+          <h5 class="text-uppercase titulo-referencia">Referências</h5>
+          <p class="referencia">
+            As 10 melhores contas para menores de 18 . Melhor dinheiro . Disponível em :<a href="https://melhordinheiro.com.br/conta/conta-digital-menor-idade">https://melhordinheiro.com.br/conta/conta-digital-menor-idade</a>. Acesso em: 18 de julho de 2023.
+          </p>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
